--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "style-loader": "^0.19.0",
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
+    "ts-loader": "^4.0.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.8.2",
