--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "author": "gjh",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "vue": "^2.5.15"
   },
   "devDependencies": {
     "@types/jquery": "^3.2.16",
@@ -31,11 +32,12 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.5.2",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "compression-webpack-plugin": "^1.0.1",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.4",
+    "css-loader": "^0.28.10",
     "cssnano": "^3.10.0",
     "eslint": "^4.12.1",
     "eslint-config-airbnb": "^16.1.0",
@@ -63,6 +65,8 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.5",
     "pre-commit": "^1.2.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "sass-loader": "^6.0.7",
     "shelljs": "^0.7.8",
     "style-loader": "^0.19.0",
@@ -70,6 +74,8 @@
     "stylelint-config-standard": "^18.0.0",
     "ts-loader": "^4.0.1",
     "url-loader": "^0.6.2",
+    "vue-loader": "^14.2.1",
+    "vue-template-compiler": "^2.5.15",
     "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-bundle-size-analyzer": "^2.7.0",
