--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "author": "gjh",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^3.2.1",
-    "vue": "^2.5.15"
+    "extract-text-webpack-plugin": "^3.0.2",
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
     "@types/jquery": "^3.2.16",
@@ -74,8 +74,6 @@
     "stylelint-config-standard": "^18.0.0",
     "ts-loader": "^4.0.1",
     "url-loader": "^0.6.2",
-    "vue-loader": "^14.2.1",
-    "vue-template-compiler": "^2.5.15",
     "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-bundle-size-analyzer": "^2.7.0",
